--- a/pages/components/template8/detail-components/gallery/Gallery.module.css
+++ b/pages/components/template8/detail-components/gallery/Gallery.module.css
@@ -82,7 +82,7 @@
 .nextButton {
   position: absolute;
   top: 50%;
-  transform: translateY(-50%);
+  /* transform: translateY(-50%); */
   background: rgba(255, 255, 255, 0.3);
   border: none;
   padding: 15px;
